# shart-gap

./: .gitignore  Cargo.toml  README.md  build.sh  claude.md  dev.sh  run.sh  tauri.conf.json  test_messaging.sh  test_room_creation.sh
.roo/: mcp.json
frontend/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx
frontend/src/components/ChatArea/: ChatArea.module.css  ChatArea.tsx
frontend/src/components/PartyMembers/: PartyMembers.module.css  PartyMembers.tsx
frontend/src/components/Settings/: Settings.module.css  Settings.tsx
frontend/src/components/VoiceCheck/: VoiceCheck.module.css  VoiceCheck.tsx
frontend/src/styles/: global.css
src/: commands.rs  invite.rs  main.rs  networking.rs  ping.rs  protocol.rs  room.rs  user.rs
windows/: README.md  build.ps1
