[package]
name = "shortgap"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
webrtc = "0.7"
tokio-tungstenite = "0.20"
futures-util = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.5"
ping = "0.5"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
